Fixed shows page button spacing

--- a/sprint-3/css/_tablet.scss
+++ b/sprint-3/css/_tablet.scss
@@ -154,11 +154,12 @@
 
     .main__table--button {
         text-align: right;
+        padding: 16px 0px;
     }
 
     .main__button--cta {
         font-size: 14px;
-        margin: 16px, 0px;
+        margin: 0px;
         width: 160px;
         height: 48px;
     }
